@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2010-2011, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -101,7 +101,7 @@ void ClassParameterHandler::currentClass( const MPlug &plug, MString &className,
 	searchPathEnvVar = plug.child( 2 ).asString();
 }
 
-MStatus ClassParameterHandler::doRestore( const MPlug &plug, IECore::ParameterPtr parameter )
+MStatus ClassParameterHandler::doRestore( const MPlug &plug, IECore::ParameterPtr parameter ) const
 {
 	MString className;
 	int classVersion;
